--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
         <title>My new website </title>
     </head>
     <body>
-        Welcome to my new world!
+        Welcome to my new world! It's time to Rock!
     </body>
 </html>
