Add a new line!

--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>My new website </title>
     </head>
     <body>
-        Welcome to my new world!
+        Welcome to my new world! chingu.io
+        Hi Guys!
     </body>
 </html>
